# northwind-anchor-modeling

./: .gitignore  Makefile  config.yaml  pyproject.toml
.devcontainer/: devcontainer.json
macros/: anchor_blueprint.py
metadata/: example.sql  model.xml  model.yaml  sources.yaml  sync_model.py
models/dab/: dab__anchor__anchors.py  dab__anchor__ties.py  dab__anchors.py
models/dab/anchor_modeling/: README.md  __init__.py  blueprint.py  config.yaml  example.sql  model.xml  sources.yaml  sync.py  tests.py
pipelines/: northwind.py
