[project]
name = "northwind-anchor-modeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alive-progress>=3.3.0",
    "dlt[duckdb]>=1.21.0",
    "duckdb<1.4",
    "pandas<3",
    "sqlmesh[lsp]>=0.228.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
